<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/form_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/form_container"
            style="@style/FormContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/add_maintenance_item"
                style="@style/HeaderIcon"
                android:layout_marginTop="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_build_black_24px" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_input_layout"
                style="@style/TextInputLayout"
                android:layout_marginTop="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_maintenance_item">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title"
                    style="@style/TextInput"
                    android:hint="@string/string_hint_title"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/due_date_input_layout"
                    style="@style/TextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_input_layout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/due_date"
                        style="@style/TextInput"
                        android:hint="@string/string_hint_due_date"
                        android:inputType="date" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/cost_input_layout"
                    style="@style/TextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/due_date_input_layout">

                    <ru.kolotnev.formattedittext.CurrencyEditText
                        android:id="@+id/cost"
                        style="@style/TextInput"
                        android:hint="@string/string_hint_cost"
                        app:currency="USD" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/description_input_layout"
                    style="@style/TextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cost_input_layout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/description"
                        style="@style/TextInput"
                        android:hint="@string/string_hint_description"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="Save"
        android:textColor="@color/colorLight"
        android:layout_alignParentBottom="true" />

</RelativeLayout>